RC6 - Letzte Änderungen nach dem AKAD–Forum

--- a/grundlagen.tex
+++ b/grundlagen.tex
@@ -1,25 +1,29 @@
 \section{Grundlagen}
 \label{sec:grundlagen}
 
+\subsection{Vergleichskriterien}
+
+Da es sich bei Öl und Daten um gänzlich verschiedene Dinge --- bzw. eben „Nicht--Dinge“ --- handelt, ist ein direkter Vergleich weder möglich noch zielführend. Für einen Vergleich bieten sich die folgenden Kriterien an: Die Eignung als Handelsware, die Einschätzung von Politik und Analysten, sowie die Auswirkungen auf Wirtschaft und Gesellschaft. Außerdem kann der jeweilige Herstellungsprozess zur Betrachtung herangezogen werden. 
+
 \subsection{Betrachtung von Erdöl}
 
-Bei Erdöl handelt es sich um den wichtigsten Energieträger des 20. Jahrhunderts bis hin zur Gegenwart. Durch Erdöl wurden viele technologische Entwicklungen begünstigt oder gar erst möglich gemacht. Durch systematische Aufbereitung in Raffinerien sind neben den offensichtlichen Anwendungen wie der Nutzung als Schmier-- und Kraftstoff für Mobilität und Maschinen oder zur Wärmegewinnung sind viele weitere Anwendungen möglich, ohne die die moderne Gesellschaft nur schwer vorstellbar wäre\footnote{z.b. Kunststoffe und Lacke, welche zum großen Teil auf Erdöl basieren, oder auch die Reichweite, die Fahrzeuge wegen der hohen Energiedichte von Benzin bzw. Diesel erzielen.}.
+Bei Erdöl handelt es sich um den wichtigsten Energieträger des 20. Jahrhunderts bis hin zur Gegenwart. Durch Erdöl wurden viele technologische Entwicklungen begünstigt oder gar erst möglich gemacht. Durch systematische Aufbereitung in Raffinerien sind neben den offensichtlichen Anwendungen wie der Nutzung als Schmier-- und Kraftstoff für Mobilität und Maschinen oder zur Wärmegewinnung sind viele weitere Anwendungen möglich, ohne die die moderne Gesellschaft nur schwer vorstellbar wäre.\footnote{z.b. Kunststoffe und Lacke, welche zum großen Teil auf Erdöl basieren, oder auch die Reichweite, die Fahrzeuge wegen der hohen Energiedichte von Benzin bzw. Diesel erzielen.}
 
 Die Wertschöpfungskette rund um Erdöl gliedert sich in die Phasen des Finden bzw. Förderns, des Sammelns bzw. Aufbereitens und in die anschließende Nutzung in diversen Endprodukten, vom Treibstoff bis hin zu diversen Kunsstoffen.
-Dabei gilt, dass Erdöl zwar in großen Mengen\footnote{Ob diese Mengen, speziell im Vergleich zum weltweiten Verbrauch, tatsächlich immer noch groß sind, wird z.T. bezweifelt}, aber nicht unbegrenzt zur Verfügung steht. 
+Dabei gilt, dass Erdöl zwar in großen Mengen\footnote{Ob diese Mengen, speziell im Vergleich zum weltweiten Verbrauch, tatsächlich immer noch groß sind, wird z.T. bezweifelt}, aber nicht unbegrenzt zur Verfügung steht. Aufgrund der großen Bedeutung ist Erdöl ein strategisch wichtiges Handelsgut, welches genutzt werden kann, um wirtschaftlichen und politischen Druck auszuüben.
 
 Die Auswirkungen des Erdöls auf Technologie, Wirtschaft, Gesellschaft und Politik des 20. Jahrhunderts sind enorm. Erdöl ermöglichte großen Reichtum von Unternehmen und Staaten, aber verursachte auch Krisen und Kriege.
 
 \subsection{Definition: Daten, Information, Wissen}
 \label{defwissen}
 
-In dieser Arbeit sollen die folgenden Definitionen gelten: Ein \buzz{Datum}\index{Daten|textbf} ist eine formalisierte Sachverhaltsaussage, ohne inhärente Bedeutung (z.B. „23°C“). Durch Interpretation im Kontext kann daraus eine \buzz{Information}\index{Information|textbf} werden (z.B. „Die Außentemperatur beträgt 23°C“)\footnote{vgl. \cite{kfk}, Seite 40}. Durch Vernetzung mehrerer Informationen miteinander, aber auch durch Erfahrung kann \buzz{informatives Wissen}\index{Wissen!informativ|textbf} entstehen (z.B. „Das Wetter ist schön“)\footnote{vgl. \cite{pnik}, Seite 106}. 
+In dieser Arbeit sollen die folgenden Definitionen gelten: Ein \buzz{Datum}\index{Daten|textbf} ist eine formalisierte Sachverhaltsaussage, ohne inhärente Bedeutung (z.B. „23°C“). Durch Interpretation im Kontext kann daraus eine \buzz{Information}\index{Information|textbf} werden (z.B. „Die Außentemperatur beträgt 23°C“).\footnote{vgl. \cite{kfk}, Seite 40} Durch Vernetzung mehrerer Informationen miteinander, aber auch durch Erfahrung kann \buzz{informatives Wissen}\index{Wissen!informativ|textbf} entstehen (z.B. „Das Wetter ist schön“).\footnote{vgl. \cite{pnik}, Seite 106}
 
-In weiteren Verfeinerungsschritten entsteht dann \buzz{handlungsorientiertes Wissen}\index{Wissen!handlungsorientiert|textbf}, (z.B. „Ich benötige beim Nachmittagsspaziergang keinen Pullover“) das dann zu einer konkreten Entscheidung führen kann (z.B. „Ich lasse den Pullover zu Hause.“)\footnote{vgl. \cite{taylor}, Seite 342}.
+In weiteren Verfeinerungsschritten entsteht dann \buzz{handlungsorientiertes Wissen}\index{Wissen!handlungsorientiert|textbf}, (z.B. „Ich benötige beim Nachmittagsspaziergang keinen Pullover“) das dann zu einer konkreten Entscheidung führen kann (z.B. „Ich lasse den Pullover zu Hause.“).\footnote{vgl. \cite{taylor}, Seite 342}
 
 \subsection{Definition: Web 1.0, Web 2.0}
 
-Unter \buzz{Web 1.0}\index{Web!1.0} versteht man das \buzz{World Wide Web}\index{Web!World Wide} wie es ursprünglich entwickelt wurde: Eine Menge von statischen Daten, die miteinander auf willkürliche Weise verknüpft werden konnten. Die Auszeichnungssprache \buzz{HTML} ermöglicht es Autoren, bestimmte Abschnitte zu kennzeichnen. Schon hier gibt es unterschiedliche Informationsstufen der Auszeichnungen: Während \code{<b>…</b>} lediglich aussagt, dass der ausgezeichnete Abschnitt in fetter Schriftart angezeigt werden soll, ist eine mit \code{<h1>…</h1>} ausgezeichnete Überschrift tatsächlich als solche zu erkennen. Auch wenn die dadurch gewonnene Information für ein automatisch erstelltes Inhaltsverzeichnis schon nützlich sein kann, wird hier keine Aussage bzgl. des eigentlichen Inhalts getroffen. Somit sind die Dokumente des Web 1.0 dem Bereich der \buzz{Daten}\index{Daten} zuzuordnen. Darin enthalten Information bzw. darin enthaltenes Wissen ist erst zugänglich, wenn diese von Menschen gelesen und ausgewertet werden\footnote{vgl. \cite{alkhatib}, Seite xvi}.
+Unter \buzz{Web 1.0}\index{Web!1.0} versteht man das \buzz{World Wide Web}\index{Web!World Wide} wie es ursprünglich entwickelt wurde: Eine Menge von statischen Daten, die miteinander auf willkürliche Weise verknüpft werden konnten. Die Auszeichnungssprache \buzz{HTML} ermöglicht es Autoren, bestimmte Abschnitte zu kennzeichnen. Schon hier gibt es unterschiedliche Informationsstufen der Auszeichnungen: Während \code{<b>…</b>} lediglich aussagt, dass der ausgezeichnete Abschnitt in fetter Schriftart angezeigt werden soll, ist eine mit \code{<h1>…</h1>} ausgezeichnete Überschrift tatsächlich als solche zu erkennen. Auch wenn die dadurch gewonnene Information für ein automatisch erstelltes Inhaltsverzeichnis schon nützlich sein kann, wird hier keine Aussage bzgl. des eigentlichen Inhalts getroffen. Somit sind die Dokumente des Web 1.0 dem Bereich der \buzz{Daten}\index{Daten} zuzuordnen. Darin enthalten Information bzw. darin enthaltenes Wissen ist erst zugänglich, wenn diese von Menschen gelesen und ausgewertet werden.\footnote{vgl. \cite{alkhatib}, Seite xvi}
 
 Die Daten des \buzz{Web 2.0}\index{Web!2.0} werden i.d.R. in Datenbanken vorgehalten und die Webseiten erst bei Abruf generiert. Durch die Popularität von Werkzeugen wie Blogs und Wikis sind deutlich mehr Menschen an der Erstellung der Inhalte beteiligt. Weitere Daten werden durch Techniken rund um \buzz{Ubiquitous Computing}\index{Ubiquitous Computing} automatisch erfasst. Diese werden auch mit sogenannten \buzz{Meta--Daten}\index{Meta--Daten} angereichert. Hierdurch wird in maschinenlesbarer Form angegeben, welche Informationen die Dokumente enthalten. Neben vom Autor selbst zugeordneten \buzz{Taxonomien}\index{Taxonomien} kommen auch automatisch generierte Meta--Daten hinzu. Beispiele hierfür sind etwa das Veröffentlichungsdatum, Beziehungen zu anderen Dokumenten\footnote{Realisiert durch sog. Backtracks -- „Wer verlinkt auf dieses Dokument?“} oder Geoinformationen („Wo wurde das Dokument erstellt?“). Inzwischen werden auch die Stimmung des Autors erfragt (z.B. bei Runtastic–Aktivitäten bzw. Facebook--Einträgen) oder durch Textanalyse ermittelt (z.B. bei der Auswertung von Produktrezessionen\footnote{vgl. \cite{sprejz}, Seite 11ff}). Die durch Daten und Meta--Daten erzielte Informationsstufe ist deutlich über der von \buzz{Web 1.0}\index{Web!1.0} einzuordnen, unterliegt aber je nach Dienst bzw. Nutzereingaben deutlichen Schwankungen.
 
@@ -31,23 +35,21 @@ Im \buzz{Web 3.0}\index{Web!3.0} werden die Daten bzw. Informationen des Web 2.0
 
 \subsection{Die Bedeutung der Daten}
 
-Den vorhandenen oder neu gesammelten Daten kann auf verschiedene Arten Bedeutung beigefügt werden. Sogenannte \buzz{Meta--Daten}\index{Meta--Daten|textbf} beschreiben Dateien durch Schlagworte oder Zuordnung von Werten zu definierten Schlüsselworten. Die Meta--Daten können in seperaten Dateien gespeichert werden\footnote{z.B. in den .INFO--Dateien in der Benutzeroberfläche des Comodore Amiga „Workbench“, oder in der Bilderdatenbank der Applikation „Adobe Lightroom“}. Ebenfalls möglich ist die Speicherung direkt in der entsprechenden Datei\footnote{z.B. EXIF--Daten in Bilddateien oder Informationen zum Werk in MP3--Dateien}. Diese Daten werden i.d.R. automatisch\footnote{z.B. durch die Kamera beim fotografieren.} oder halbautomatisch\footnote{Einmalig manuell, dann Bereitstellung für andere Nutzer per CDDB oder andere Dienste.} den Daten zugeordnet. Manche Metadaten können auch bei Abruf direkt ermittelt werden\footnote{z.B. Dateigröße}.
+Den vorhandenen oder neu gesammelten Daten kann auf verschiedene Arten Bedeutung beigefügt werden. Sogenannte \buzz{Meta--Daten}\index{Meta--Daten|textbf} beschreiben Dateien durch Schlagworte oder Zuordnung von Werten zu definierten Schlüsselworten. Die Meta--Daten können in seperaten Dateien gespeichert werden.\footnote{z.B. in den .INFO--Dateien in der Benutzeroberfläche des Comodore Amiga „Workbench“, oder in der Bilderdatenbank der Applikation „Adobe Lightroom“} Ebenfalls möglich ist die Speicherung direkt in der entsprechenden Datei.\footnote{z.B. EXIF--Daten in Bilddateien oder Informationen zum Werk in MP3--Dateien} Diese Daten werden i.d.R. automatisch\footnote{z.B. durch die Kamera beim fotografieren.} oder halbautomatisch\footnote{Einmalig manuell, dann Bereitstellung für andere Nutzer per CDDB oder andere Dienste.} den Daten zugeordnet. Manche Metadaten können auch bei Abruf direkt ermittelt werden.\footnote{z.B. Dateigröße}
 
 In textbasierten Dateiformaten wie XML werden hingegen einzelne Elemente durch Markup--Tags maschinenlesbar mit Bedeutung versehen. So sind Zeichenketten als Namen, Adressen, Telefonnummer,  etc. identifizier-- und auswertbar. Die Meta--Daten sind hier Teil des Datenstroms.
 
-Durch Techniken wie Gesichtserkennung oder Textanalyse können Meta--Daten auch automatisch aus den Daten generiert werden. Hierbei bestimmt die Menge der auszuwertenden Daten und die Qualität der bereits vorhandenen Metadaten die Qualität der Ergebnisse. Die Ergebnisse werden attraktiver, je mehr die Entwicklung von \buzz{Big Data}\index{Big Data} zu \buzz{Big Information}\index{Big Information} und gar \buzz{Big Knowledge}\index{Big Information}\footnote{vgl. \cite{bigdikw}} geht\footnote{vgl. \cite{faz:inng}}.
+Durch Techniken wie Gesichtserkennung oder Textanalyse können Meta--Daten auch automatisch aus den Daten generiert werden. Hierbei bestimmt die Menge der auszuwertenden Daten und die Qualität der bereits vorhandenen Metadaten die Qualität der Ergebnisse. Diese werden attraktiver, je mehr die Entwicklung von \buzz{Big Data}\index{Big Data} zu \buzz{Big Information}\index{Big Information} und gar \buzz{Big Knowledge}\index{Big Information}\footnote{vgl. \cite{bigdikw}} geht.\footnote{vgl. \cite{faz:inng}}
 
+\begin{floatingfigure}[r]{0.5\textwidth}
+\includegraphics[width=0.49\textwidth]{layerCake-4.png}
+\caption[Der Stack des semantischen Web]{Der Stack des semantischen Web\protect\footnotemark}
+\label{pic:semanticstack}
+\end{floatingfigure}
+\footnotetext{\cite{w3cstack}, Seite 24}
 Durch Regeln, Logik und Verknüpfungen kann aus den Informationen auch Wissen erzeugt werden:
 Person A ist auf einem Bild zusammen mit Person B zu sehen (Gesichtserkennung). Die Geoinformation und Uhrzeit (EXIF--Tags) zeigen, dass das Foto auf einer Veranstaltung aufgenommen wurde, das zu diesem Zeitpunkt an diesem Ort statt fand (Semantisches Markup der Veranstaltung).
 Daraus kann auf politische Gesinnung, Musikgeschmack und/oder Trinkfreudigkeit von Person A geschlossen werden.
 
 Dieser hier nur grob skizzierte, auf den Spezialfall zugeschnittene Pfad von den Daten zum Wissen kann durch verschiedene Elemente des Web 3.0 Werkzeugkastens\footnote{Web 3.0 Stack, siehe Abbildung \ref{pic:semanticstack}} allgemein formuliert und abgebildet werden. Hier sind beginnend von den datennahen Schichten zur Identifikation und Beschreibung von Objekten über den Datenaustausch, Abfragesprachen und Regelwerke bis hin zu den obersten Schichten der vereinheitlichen Logik, automatischer Beweisführung und dem darauf aufbauenden Vertrauen in das generierte Wissen alle relevanten Bereiche abgedeckt.
 
-\begin{figure}[H]
-\begin{center}
-\includegraphics[width=0.67\textwidth]{layerCake-4.png}
-\caption[Der Stack des semantischen Web]{Der Stack des semantischen Web\protect\footnotemark}
-\label{pic:semanticstack}
-\end{center}
-\end{figure}
-\footnotetext{\cite{w3cstack}, Seite 24}
