--- a/literatur.bib
+++ b/literatur.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Stefan Waidele at 2014-11-15 00:29:08 +0100 
+%% Created for Stefan Waidele at 2014-11-24 12:07:21 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{wiener,
+	Author = {Norbert Wiener},
+	Date-Added = {2014-11-24 09:46:39 +0000},
+	Date-Modified = {2014-11-24 09:47:25 +0000},
+	Publisher = {Metzner},
+	Title = {Mensch und Menschmaschine},
+	Year = {1952}}
 
 @misc{gartneriot,
 	Author = {{Gartner (Hrsg.)}},
