--- a/schluss.tex
+++ b/schluss.tex
@@ -6,6 +6,8 @@ In der Analogie zu Erdöl lassen sich die \buzz{Daten}\index{Daten} wie in der T
 
 Datenschutz ist in diesem Bild vergleichbar mit Umweltschutz, der auf allen Ebenen dafür kämpft, dass die negativen Auswirkungen der neuen Technologie gemindert bzw. eliminiert werden. Wo beim Öl Strände, Seevögel, die Atmosphäre und das Klima geschützt werden, sind es  im Umfeld der des semantischen Webs die Bürger--, Grund-- und Persönlichkeitsrechte, die vor übermäßigem und falschem Einsatz der Technologie geschützt werden sollen. Die Achtung und der Schutz dieser Rechte ist wie auch der Umweltschutz beim Öl wichtig, wenn die Verbreitung der neuen Techniken nicht durch gestörtes Vertrauen der Verbraucher gehemmt oder gar verhindert werden soll.
 
+Auch die Einschätzungen von Politik und Analysten sowie der rege Handel sowohl mit Daten als auch mit Öl und den daraus gewonnenen Produkten stützen die hier untersuchte These.
+
 \subsection{Ausblick}
 \label{ausblick}
 
