--- a/vorlage.tex
+++ b/vorlage.tex
@@ -26,6 +26,7 @@
 \usepackage{listings}
 \usepackage{mathptmx}
 \usepackage{geometry}
+\usepackage{floatflt}
 \usepackage{helvet}
 \usepackage{courier}
 \usepackage{setspace}
