--- a/einleitung.tex
+++ b/einleitung.tex
@@ -3,7 +3,7 @@
 
 \subsection{Begründung der Problemstellung}
 
-Technologien rund um das Schlagwort \buzz{Big Data}\index{Big Data} sind laut Gartner die großen Triebfedern in der Informationstechnologie\footnote{vgl. \cite{gartner2014}}. Durch Entwicklungen wie \buzz{Internet of Things}, \buzz{Ubiquitous Computing}\index{Ubiquitous Computing} und \buzz{Life Tracking} werden die in naher Zukunft die generierte Datenmenge als auch die Anzahl der verarbeitenden Instanzen in den nächsten Jahren deutlich zunehmen.
+Technologien rund um das Schlagwort \buzz{Big Data}\index{Big Data} sind laut Gartner die großen Triebfedern in der Informationstechnologie.\footnote{vgl. \cite{gartner2014}} Durch Entwicklungen wie \buzz{Internet of Things}, \buzz{Ubiquitous Computing}\index{Ubiquitous Computing} und \buzz{Life Tracking} werden die in naher Zukunft die generierte Datenmenge als auch die Anzahl der verarbeitenden Instanzen in den nächsten Jahren deutlich zunehmen.
 
 Diese Entwicklung macht eine systematische Aufbereitung der anfallenden Daten hin zu repräsentiertem Wissen möglich und notwendig. Das semantische Web, oder auch \buzz{Web 3.0}\index{Web!3.0}, verspricht Struktur in die Datenmenge zu bringen. Die Erwartungen, aber auch die Befürchtungen gegenüber den entsprechenden technischen Fortschritten sind immens.
 
@@ -11,10 +11,10 @@ Diese Entwicklung macht eine systematische Aufbereitung der anfallenden Daten hi
 
 \textbf{Ziel dieser Arbeit ist es, die momentanen Entwicklungen der Datenbeständen hin zum semantischen Web und deren Auswirkungen auf Wirtschaft und Gesellschaft mit denen durch die Industrielle Nutzung des Öls im 20. Jahrhundert zu vergleichen.}
 
-Hierzu werden zunächst im Kapitel~\myref{sec:grundlagen} die für diese Arbeit relevanten Begriffe und Konzepte definiert, bevor im Kapitel~\myref{sec:hauptteil} die Auswirkungen der Technologien auf Wirtschaft und Gesellschaft beschrieben und in Abschnitt~\myref{vergleich} verglichen werden.
+Hierzu werden zunächst im Kapitel~\myref{sec:grundlagen} die für diese Arbeit relevanten Begriffe, Konzepte und Vergleichskriterien definiert, bevor im Kapitel~\myref{sec:hauptteil} ebendiese Kriterien untersucht und betrachtet werden.
 
 \subsection{Abgrenzung}
 
 Der Augenmerk dieser Arbeit liegt auf den behandelten Konzepten und Technologien der Informationstechnologie. Die Entsprechungen in der Ölindustrie werden nicht in der gleichen Tiefe erörtert und belegt, sondern beschränken sich auf generelle Aussagen und Ansichten.
 
-Die Themenbereiche \buzz{Internet of Things}, \buzz{Ubiquitous Computing} und \buzz{Life Tracking} werden in dieser Arbeit unter dem Begriff \buzz{Ubiquitous Computing}\index{Ubiquitous Computing|textbf}\footnote{ubiquitous: Englisch für „allgegenwärtig“} zusammengefasst, auch wenn damit unterschiedliche Techniken, Geräte und Anwendungsfälle beschrieben werden können. Ebenfalls werden diese Gebiete als stetig wachsende Datenquellen angesehen, ohne dass sie genauer untersucht werden\footnote{Siehe hierzu auch Abschnitt~\myref{ausblick}}.
+Die Themenbereiche \buzz{Internet of Things}, \buzz{Ubiquitous Computing} und \buzz{Life Tracking} werden in dieser Arbeit unter dem Begriff \buzz{Ubiquitous Computing}\index{Ubiquitous Computing|textbf}\footnote{ubiquitous: Englisch für „allgegenwärtig“} zusammengefasst, auch wenn damit unterschiedliche Techniken, Geräte und Anwendungsfälle beschrieben werden können. Ebenfalls werden diese Gebiete als stetig wachsende Datenquellen angesehen, ohne dass sie genauer untersucht werden.\footnote{Siehe hierzu auch Abschnitt~\myref{ausblick}}
