--- a/hauptteil.tex
+++ b/hauptteil.tex
@@ -4,7 +4,7 @@
 \subsection{Daten als Handelsware}
 \label{handelsware}
 
-Sowohl Daten als auch Information und Wissen werden ähnlich wie physische Güter gehandelt. Hierbei bestehen aufgrund der Intangibilität und der Irreveribilität von Transaktionen deutliche Unterschiede zum Handel mit Erdöl.\footnote{vgl. \cite{wiener}, Seite 117} Da jedoch ein realer Markt für virtuelle Güter besteht und diese dort einen Preis erzielen, stellen Daten und die daraus gewonnenen Produkte auch Handelswaren dar.\footnote{vgl. \cite{wiener}, S115}
+Sowohl Daten als auch Information und Wissen werden ähnlich wie physische Güter gehandelt. Hierbei bestehen aufgrund der Intangibilität und der Irreveribilität von Transaktionen deutliche Unterschiede zum Handel mit Erdöl.\footnote{vgl. \cite{wiener}, Seite 117} Da jedoch ein realer Markt für virtuelle Güter besteht und diese dort einen Preis erzielen,\footnote{Als Beispiel sind hier Marktforschungsinstitute wie die Gesellschaft für Konsumforschung (GfK) oder das Deutsche Wirtschaftswissenschaftliche Institut für Fremdenverkehr (DWIF) zu nennen.} stellen Daten und die daraus gewonnenen Produkte auch Handelswaren dar.\footnote{vgl. \cite{wiener}, S115}
 
 Der Wert dieser Ware lässt sich jedoch nicht beliebig erhalten, da dieser durch Weiterverbreitung bzw. Veränderungen in durch die Daten beschriebenen Realität abnehmen kann.\footnote{vgl. \cite{wiener}, Seite 113 bzw. 122}
 
